# dataviz-llm-app

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  railway.toml  requirements.txt
dataviz_backend/: __init__.py  main.py  models.py  orchestrator.py
dataviz_backend/agents/: code_generator.py  data_analyst.py  viz_strategist.py
dataviz_front/: app.js  index.html  style.css
static/: app.js  index.html  style.css
tests/: test.csv  test_agents.py  test_api.py
